<resources>
    <string name="app_name">Anonymous E-assessment</string>
    <string name="register_as">Register as:</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="your_sign">Your sign</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="login_failed">login failed\n</string>
    <string name="invalid_email">invalid email</string>
    <string name="invalid_password">invalid password\n</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="submit">Submit</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="anonymous">Anonymous</string>
    <string name="e_assessment">E-assessment</string>
    <string name="or_text">or</string>
    <string name="signin">Login</string>
    <string name="nav_icon_desc">navigate</string>
    <string name="app_icon_desc">icon</string>
    <string name="action_logout">logout</string>
    <string name="menu_icon_desc">menu\n</string>
    <string name="welcome_text">Welcome to Anonymous E-assessment Application</string>
    <string name="choose_course">Choose Course</string>
    <string name="course_name">Course Name</string>
    <string name="add_questions">Add Questions</string>
    <string name="generate_test">Generate Test</string>
    <string name="get_previous_tests_results">Get Previous tests\' Results</string>
    <string name="click_to_add_new_question">Click to add new question</string>
    <string name="save">Save</string>
    <string name="add_question">add question</string>
    <string name="test_generated">Test Generated</string>
    <string name="view">View</string>
    <string name="exit">Exit</string>
    <string name="test_s_results">Tests\' Results</string>
    <string name="view_result"><u>View Result</u></string>
    <string name="view_answers"><u>View Answers</u></string>
    <string name="question_type">Question type</string>
    <string name="long_answer">Long Answer</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="notifications">Notifications</string>
    <string name="get_questions">Get Questions</string>
    <string name="send_lack_of_understand_sign">Send lack of understand sign</string>
    <string name="get_results_of_the_previous_test">Get Results of the Previous Test</string>
    <string name="what_did_you_not_understand">What did you not understand?</string>
    <string name="send">Send</string>
    <string name="send_answers">Send Answers</string>
    <string name="test_questions">Test Questions</string>
    <string name="test_result">Test Result</string>
    <string name="your_result_is">Your Result Is</string>
</resources>