<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_as"
        app:layout_constraintBottom_toTopOf="@+id/teacher_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_64dp_size"/>

    <Button
        android:id="@+id/teacher_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text"
        app:layout_constraintBottom_toTopOf="@+id/student_button"/>

    <Button
        android:id="@+id/student_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacher_button" />

</androidx.constraintlayout.widget.ConstraintLayout>