<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
<variable
    name="StudentMainFragViewModel"
    type="com.issasafar.anonymouse_assessment.viewmodels.student.StudentMainFragViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="@dimen/margin_16dp_size"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.student.ui.main.student.StudentMainFragment">
        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_fonts_family"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textSize="@dimen/headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/choose_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_fonts_family"
            android:text="@string/choose_course"
            android:textSize="@dimen/headline6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_message"
            app:layout_constraintVertical_bias="0.3" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/textConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp_size"
            app:layout_constraintBottom_toBottomOf="@+id/choose_course"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/choose_course"
            app:layout_constraintTop_toTopOf="@+id/choose_course">



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/courseNameInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp_size"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:text="@={StudentMainFragViewModel.courseName}"
                    android:maxLines="3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/course_name" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:onClick="@{()->StudentMainFragViewModel.getQuestionsClicked()}"
            android:id="@+id/get_questions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_questions"
            app:layout_constraintBottom_toTopOf="@id/get_prev_result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textConstraintLayout"
            app:layout_constraintVertical_chainStyle="spread" />

        <Button
            android:onClick="@{()->StudentMainFragViewModel.getResultsClicked()}"
            android:id="@+id/get_prev_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_results_of_the_previous_test"
            app:layout_constraintBottom_toTopOf="@id/send_lack_message"
            app:layout_constraintEnd_toEndOf="@+id/get_questions_button"
            app:layout_constraintStart_toStartOf="@+id/get_questions_button"
            app:layout_constraintTop_toBottomOf="@+id/get_questions_button" />

        <Button
            android:onClick="@{()->StudentMainFragViewModel.sendLackMessageClicked()}"
            android:id="@+id/send_lack_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_lack_of_understand_sign"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="@+id/get_prev_result"
            app:layout_constraintStart_toStartOf="@+id/get_prev_result"
            app:layout_constraintTop_toBottomOf="@+id/get_prev_result" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="586dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>