<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="TeacherMainFragment"
            type="com.issasafar.anonymouse_assessment.viewmodels.teacher.TeacherMainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/teacher_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_8dp_size"
        tools:context=".views.teacher.TeacherMainActivity">

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_fonts_family"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textSize="@dimen/headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_fonts_family"
            android:text="@string/choose_course"
            android:textSize="@dimen/headline6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_message"
            app:layout_constraintVertical_bias="0.3" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/textConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp_size"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView">

            <ImageButton
                android:id="@+id/dropdown_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/margin_8dp_size"
                android:src="@drawable/baseline_arrow_drop_down_24"
                android:onClick="@{()->TeacherMainFragment.dropDownClicked()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/courseNameInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp_size"
                app:layout_constraintStart_toEndOf="@id/dropdown_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:inputError="@{TeacherMainFragment.courseNameError}"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/course_name" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_questions"
            app:layout_constraintBottom_toTopOf="@id/generate_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textConstraintLayout"
            app:layout_constraintVertical_chainStyle="spread" />

        <Button
            android:id="@+id/generate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate_test"
            app:layout_constraintBottom_toTopOf="@id/get_button"
            app:layout_constraintEnd_toEndOf="@+id/add_button"
            app:layout_constraintStart_toStartOf="@+id/add_button"
            app:layout_constraintTop_toBottomOf="@+id/add_button" />

        <Button
            android:id="@+id/get_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_previous_tests_results"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="@+id/generate_button"
            app:layout_constraintStart_toStartOf="@+id/generate_button"
            app:layout_constraintTop_toBottomOf="@+id/generate_button" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="586dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>