<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="@dimen/margin_16dp_size"
    app:cardCornerRadius="@dimen/margin_16dp_size"
    app:cardMaxElevation="@dimen/margin_16dp_size"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="?android:colorPrimary"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="@dimen/margin_24dp_size"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginTop="@dimen/margin_16dp_size"
            android:id="@+id/test_generated_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_generated"
            android:textColor="@color/white"
            android:textSize="@dimen/subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:layout_margin="@dimen/margin_16dp_size"
            android:id="@+id/view_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="@string/view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/exit_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/test_generated_text" />

        <Button
           android:layout_margin="@dimen/margin_16dp_size"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view_button"
            app:layout_constraintTop_toBottomOf="@+id/test_generated_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>